[tool.poetry]
name = "flask-bgp-lg"
version = "0.1.0"
description = ""
authors = ["Usman <usman@usman.network>"]
readme = "README.md"
packages = [{include = "flask_bgp_lg"}]

[tool.poetry.dependencies]
python = "^3.10"
network-automation-usman-u = "^0.1.1"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.44"
WTForms = "^3.0.1"
DateTime = "^4.7"
Flask-WTF = "^1.0.1"
wtforms-sqlalchemy = "^0.3"
flask-sqlalchemy = "^3.0.2"
email-validator = "^1.3.0"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
